fix(controller): set forceHideOnBlur to false in WoxLauncherController

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -466,11 +466,8 @@
   "plugin_explorer_open": "Open",
   "plugin_explorer_reveal_in_explorer": "Reveal in file explorer",
   "plugin_explorer_jump_to": "Jump to",
-  "plugin_explorer_setting_show_hint": "Enable quick filter in file explorer (type to filter directly, no shortcut required)",
-  "plugin_explorer_hint_tooltip_message": "Use Wox to quickly filter current folder (you can disable this hint in plugin setting of file explorer search)",
-  "plugin_explorer_hint_tooltip_message_dialog": "Use Wox to quickly navigate folders (you can disable this hint in plugin setting of file explorer search)",
-  "plugin_explorer_hint_message": "Click to filter",
-  "plugin_explorer_hint_message_dialog": "Click to navigate",
+  "plugin_explorer_setting_enable_type_to_search": "Enable type-to-search in file explorer",
+  "plugin_explorer_setting_enable_type_to_search_tips": "When File Explorer is focused, just start typing to open Wox and filter the current folder. Press Esc to cancel.",
   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
   "plugin_clipboard_image_width": "Image width",
