--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -463,11 +463,8 @@
   "plugin_explorer_open": "Abrir",
   "plugin_explorer_reveal_in_explorer": "Revelar no explorador de arquivos",
   "plugin_explorer_jump_to": "Ir para",
-  "plugin_explorer_setting_show_hint": "Ativar filtro rápido no explorador de arquivos (digite para filtrar diretamente, sem atalho)",
-  "plugin_explorer_hint_tooltip_message": "Clique em mim para filtrar rapidamente as pastas (você pode desativar esta dica nas configurações do plugin)",
-  "plugin_explorer_hint_tooltip_message_dialog": "Clique em mim para usar o Wox para navegar rapidamente pelas pastas (você pode desativar esta dica nas configurações do plugin)",
-  "plugin_explorer_hint_message": "Clique para filtrar",
-  "plugin_explorer_hint_message_dialog": "Clique para navegar",
+  "plugin_explorer_setting_enable_type_to_search": "Ativar pesquisa ao digitar no explorador de arquivos",
+  "plugin_explorer_setting_enable_type_to_search_tips": "Quando o Explorador de Arquivos estiver em foco, basta digitar para abrir o Wox e filtrar a pasta atual. Pressione Esc para cancelar.",
   "plugin_indicator_activate": "Ativar",
   "plugin_indicator_activate_plugin": "Ativar o plugin %s",
   "plugin_paste_to_window": "Colar em %s",
