--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -463,9 +463,8 @@
   "plugin_explorer_open": "Открыть",
   "plugin_explorer_reveal_in_explorer": "Показать в проводнике",
   "plugin_explorer_jump_to": "Перейти к",
-  "plugin_explorer_setting_show_hint": "Включить быстрый фильтр в проводнике (начните вводить для фильтрации, без горячих клавиш)",
-  "plugin_explorer_hint_tooltip_message": "Используйте Wox для быстрого перехода по папкам (вы можете отключить эту подсказку в настройках плагина)",
-  "plugin_explorer_hint_tooltip_message_dialog": "Используйте Wox для быстрого перехода по папкам (вы можете отключить эту подсказку в настройках плагина)",
+  "plugin_explorer_setting_enable_type_to_search": "Включить поиск при наборе в проводнике",
+  "plugin_explorer_setting_enable_type_to_search_tips": "Когда Проводник в фокусе, просто начните печатать — откроется Wox и вы сможете фильтровать текущую папку. Нажмите Esc, чтобы отменить.",
   "plugin_explorer_hint_message": "Нажмите, чтобы отфильтровать",
   "plugin_explorer_hint_message_dialog": "Нажмите, чтобы перейти",
   "plugin_indicator_activate": "Активировать",
