feat: add tray query feature
- Introduced a Disabled field in backend models for QueryHotkey, QueryShortcut, and TrayQuery to allow temporary disabling of entries.
- Implemented runtime filtering to ignore disabled entries during hotkey registration, shortcut expansion, and tray icon refresh.
- Enhanced JSON parsing logic to handle the Disabled flag for TrayQueries.
- Updated Flutter entities and settings UI to include a Disabled checkbox for all three settings tables.
- Added internationalization keys for the Disabled feature in language files.
- Conducted thorough testing and validation to ensure existing functionality remains intact.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -118,11 +118,21 @@
   "ui_query_hotkeys_query_tooltip": "The query when the hotkey is triggered. Following variables are supported:\n\n{wox:selected_text} represent the selected text.\n{wox:active_browser_url} represent the url of active browser tab.\n{wox:file_explorer_path} represent the path of the currently open folder in the file explorer (if available).",
   "ui_query_hotkeys_silent": "Silent",
   "ui_query_hotkeys_silent_tooltip": "When selected, if the count of query result is 1, Wox will execute the query directly without showing the result list.\n\nThis is useful when you have a query that always return one result and you want to execute it directly.\nNote: This option is only available when the query result count is 1. Otherwise it will be ignored and notify a warning.",
+  "ui_disabled": "Disabled",
+  "ui_disabled_tooltip": "When selected, this item is temporarily disabled without being deleted.",
   "ui_add": "Add",
   "ui_query_shortcuts_shortcut": "Shortcut",
   "ui_query_shortcuts_shortcut_tooltip": "Query shortcut. E.g. 'translate' => 'chatgpt translate'",
   "ui_query_shortcuts_query": "Query",
   "ui_query_shortcuts_query_tooltip": "The query represented by the shortcut.",
+  "ui_tray_queries": "Tray Queries",
+  "ui_tray_queries_tips": "Add tray query icons. Clicking an icon opens Wox near the tray/menu bar and runs the configured query.",
+  "ui_tray_queries_icon": "Icon",
+  "ui_tray_queries_icon_tooltip": "Tray icon for this query.",
+  "ui_tray_queries_query": "Query",
+  "ui_tray_queries_query_tooltip": "The query to run when this tray icon is clicked.",
+  "ui_tray_queries_width": "Width",
+  "ui_tray_queries_width_tooltip": "Optional. Window width in pixels for this tray query. Empty means app width / 2.",
   "ui_ai_providers_name": "Provider Name",
   "ui_ai_providers_name_tooltip": "The name of the AI provider.",
   "ui_ai_providers_alias": "Alias",
