--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -115,11 +115,21 @@
   "ui_query_hotkeys_query_tooltip": "Запрос при нажатии горячей клавиши. Поддерживаются следующие переменные:\n\n{wox:selected_text} представляет выделенный текст.\n{wox:active_browser_url} представляет URL активной вкладки браузера.\n{wox:file_explorer_path} представляет путь к текущей открытой папке в проводнике (если доступно).",
   "ui_query_hotkeys_silent": "Сильный",
   "ui_query_hotkeys_silent_tooltip": "Если выбран, и количество результатов запроса равно 1, Wox выполнит запрос непосредственно без отображения списка результатов.\n\nЭто полезно, когда у вас есть запрос, который всегда возвращает один результат, и вы хотите выполнить его непосредственно.\nПримечание: Эта опция доступна только в том случае, если количество результатов запроса равно 1. В противном случае она будет проигнорирована и будет выведено предупреждение.",
+  "ui_disabled": "Отключено",
+  "ui_disabled_tooltip": "Если выбрано, этот пункт временно отключается без удаления.",
   "ui_add": "Добавить",
   "ui_query_shortcuts_shortcut": "Горячая клавиша",
   "ui_query_shortcuts_shortcut_tooltip": "Горячая клавиша для запроса. Например: 'translate' => 'chatgpt translate'",
   "ui_query_shortcuts_query": "Запрос",
   "ui_query_shortcuts_query_tooltip": "Запрос, представленный горячей клавишей",
+  "ui_tray_queries": "Запросы в трее",
+  "ui_tray_queries_tips": "Добавьте иконки запросов в трее. При клике по иконке Wox откроется рядом с треем/строкой меню и выполнит настроенный запрос.",
+  "ui_tray_queries_icon": "Иконка",
+  "ui_tray_queries_icon_tooltip": "Иконка трея для этого запроса.",
+  "ui_tray_queries_query": "Запрос",
+  "ui_tray_queries_query_tooltip": "Запрос, который выполняется при клике по этой иконке трея.",
+  "ui_tray_queries_width": "Ширина",
+  "ui_tray_queries_width_tooltip": "Необязательно. Ширина окна (px) для этого запроса в трее. Пусто: половина ширины приложения.",
   "ui_ai_providers_name": "Имя поставщика",
   "ui_ai_providers_name_tooltip": "Имя поставщика",
   "ui_ai_providers_alias": "Псевдоним",
