feat: add tray query feature
- Introduced a Disabled field in backend models for QueryHotkey, QueryShortcut, and TrayQuery to allow temporary disabling of entries.
- Implemented runtime filtering to ignore disabled entries during hotkey registration, shortcut expansion, and tray icon refresh.
- Enhanced JSON parsing logic to handle the Disabled flag for TrayQueries.
- Updated Flutter entities and settings UI to include a Disabled checkbox for all three settings tables.
- Added internationalization keys for the Disabled feature in language files.
- Conducted thorough testing and validation to ensure existing functionality remains intact.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -116,11 +116,21 @@
   "ui_query_hotkeys_query_tooltip": "A consulta quando a tecla de atalho acionada. As seguintes variáveis são suportadas:\n\n{wox:selected_text} representa o texto selecionado.\n{wox:active_browser_url} representa o URL da guia do navegador ativo.\n{wox:file_explorer_path} representa o caminho da pasta atualmente aberta no explorador de arquivos (se disponível).",
   "ui_query_hotkeys_silent": "Silencioso",
   "ui_query_hotkeys_silent_tooltip": "Quando selecionado, se o número de resultados da consulta for 1, o Wox executar a consulta diretamente sem mostrar a lista de resultados.\n\nIssotil quando você tem uma consulta que sempre retorna um resultado e deseja execut-la diretamente.\nNota: Esta opção s est disponível quando o número de resultados da consulta 1. Caso contrário, ser ignorado e notificar um aviso.",
+  "ui_disabled": "Desativado",
+  "ui_disabled_tooltip": "Quando selecionado, este item é desativado temporariamente sem ser removido.",
   "ui_add": "Adicionar",
   "ui_query_shortcuts_shortcut": "Atalho",
   "ui_query_shortcuts_shortcut_tooltip": "Atalho para disparar a consulta. Exemplo: 'traduzir' => 'chatgpt traduzir'",
   "ui_query_shortcuts_query": "Consulta",
   "ui_query_shortcuts_query_tooltip": "A consulta representada pelo atalho.",
+  "ui_tray_queries": "Consultas da bandeja",
+  "ui_tray_queries_tips": "Adicione ícones de consulta na bandeja. Ao clicar em um ícone, o Wox abre perto da bandeja/barra de menu e executa a consulta configurada.",
+  "ui_tray_queries_icon": "Ícone",
+  "ui_tray_queries_icon_tooltip": "Ícone da bandeja para esta consulta.",
+  "ui_tray_queries_query": "Consulta",
+  "ui_tray_queries_query_tooltip": "Consulta a ser executada ao clicar neste ícone da bandeja.",
+  "ui_tray_queries_width": "Largura",
+  "ui_tray_queries_width_tooltip": "Opcional. Largura da janela (px) para esta consulta da bandeja. Vazio usa metade da largura do app.",
   "ui_ai_providers_name": "Nome do provedor",
   "ui_ai_providers_name_tooltip": "O nome do provedor de IA.",
   "ui_ai_providers_alias": "Alias",
