--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -119,11 +119,21 @@
   "ui_query_hotkeys_query_tooltip": "当快捷键被触发时，查询的内容。支持以下变量：\n\n{wox:selected_text} 代表选中的文本\n{wox:active_browser_url} 代表活动的浏览器标签页的URL\n{wox:file_explorer_path} 代表当前文件管理器中打开的文件夹路径（如果有）",
   "ui_query_hotkeys_silent": "静默",
   "ui_query_hotkeys_silent_tooltip": "当选中时，如果查询结果数量为1，Wox将直接执行查询而不显示结果列表。\n\n这在您有一个总是返回一个结果的查询并且您希望直接执行它时非常有用。\n注意：此选项仅在查询结果数量为1时可用。否则将忽略并通知警告。",
+  "ui_disabled": "禁用",
+  "ui_disabled_tooltip": "选中后将临时禁用该项，但不会删除。",
   "ui_add": "添加",
   "ui_query_shortcuts_shortcut": "快捷键",
   "ui_query_shortcuts_shortcut_tooltip": "用于触发查询的快捷键。例如：'translate' => 'chatgpt translate'",
   "ui_query_shortcuts_query": "查询",
   "ui_query_shortcuts_query_tooltip": "查询内容",
+  "ui_tray_queries": "托盘查询",
+  "ui_tray_queries_tips": "添加托盘查询图标。点击图标后，Wox 会在托盘/菜单栏附近打开并执行配置的查询。",
+  "ui_tray_queries_icon": "图标",
+  "ui_tray_queries_icon_tooltip": "该查询的托盘图标。",
+  "ui_tray_queries_query": "查询",
+  "ui_tray_queries_query_tooltip": "点击该托盘图标时要执行的查询。",
+  "ui_tray_queries_width": "宽度",
+  "ui_tray_queries_width_tooltip": "可选。该托盘查询窗口宽度（像素）。留空时使用应用宽度的一半。",
   "ui_ai_providers_name": "模型提供者",
   "ui_ai_providers_name_tooltip": "模型提供者名称",
   "ui_ai_providers_alias": "别名",
