feat: add emoji selector component and update image handling in plugin settings

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -325,6 +325,16 @@
   "ui_about_description": "Wox is a launcher for Windows, macOS and Linux that simply works.",
   "ui_image_editor_emoji": "Emoji",
   "ui_image_editor_upload_image": "Upload Image",
+  "ui_select_emoji": "Select Emoji",
+  "ui_select_emoji_group_recommended": "Recommended",
+  "ui_select_emoji_group_faces": "Smileys",
+  "ui_select_emoji_group_people": "People",
+  "ui_select_emoji_group_animals": "Animals",
+  "ui_select_emoji_group_food": "Food",
+  "ui_select_emoji_group_activities": "Activities",
+  "ui_select_emoji_group_travel": "Travel",
+  "ui_select_emoji_group_objects": "Objects",
+  "ui_select_emoji_group_symbols": "Symbols",
   "ui_theme_preview_title": "Wox Theme Preview",
   "ui_theme_preview_text_1": "Search for applications, folders, files and more",
   "ui_theme_preview_text_2": "Plenty of Plugins and AI Themes",
