--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -322,6 +322,16 @@
   "ui_about_description": "Wox - это лаунчер для Windows, macOS и Linux, который просто работает.",
   "ui_image_editor_emoji": "Эмодзи",
   "ui_image_editor_upload_image": "Загрузить изображение",
+  "ui_select_emoji": "Выбрать эмодзи",
+  "ui_select_emoji_group_recommended": "Рекомендуемые",
+  "ui_select_emoji_group_faces": "Смайлы",
+  "ui_select_emoji_group_people": "Люди",
+  "ui_select_emoji_group_animals": "Животные",
+  "ui_select_emoji_group_food": "Еда",
+  "ui_select_emoji_group_activities": "Активности",
+  "ui_select_emoji_group_travel": "Путешествия",
+  "ui_select_emoji_group_objects": "Объекты",
+  "ui_select_emoji_group_symbols": "Символы",
   "ui_theme_preview_title": "Предпросмотр темы Wox",
   "ui_theme_preview_text_1": "Поиск приложений, папок, файлов и многого другого",
   "ui_theme_preview_text_2": "Множество плагинов и AI тем",
