feat: add emoji selector component and update image handling in plugin settings

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -277,6 +277,16 @@
   "ui_about_description": "Wox é um launcher para Windows, macOS e Linux que simplesmente funciona.",
   "ui_image_editor_emoji": "Emoji",
   "ui_image_editor_upload_image": "Carregar imagem",
+  "ui_select_emoji": "Selecionar emoji",
+  "ui_select_emoji_group_recommended": "Recomendados",
+  "ui_select_emoji_group_faces": "Carinhas",
+  "ui_select_emoji_group_people": "Pessoas",
+  "ui_select_emoji_group_animals": "Animais",
+  "ui_select_emoji_group_food": "Comida",
+  "ui_select_emoji_group_activities": "Atividades",
+  "ui_select_emoji_group_travel": "Viagem",
+  "ui_select_emoji_group_objects": "Objetos",
+  "ui_select_emoji_group_symbols": "Símbolos",
   "ui_theme_preview_title": "Visualização do Tema Wox",
   "ui_theme_preview_text_1": "Pesquisar aplicativos, pastas, arquivos e mais",
   "ui_theme_preview_text_2": "Muitos Plugins e Temas de IA",
