--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -280,6 +280,16 @@
   "ui_about_description": "Wox 是一个适用于 Windows、macOS 和 Linux 的启动器，简单易用。",
   "ui_image_editor_emoji": "表情符号",
   "ui_image_editor_upload_image": "上传图片",
+  "ui_select_emoji": "选择表情",
+  "ui_select_emoji_group_recommended": "推荐",
+  "ui_select_emoji_group_faces": "笑脸",
+  "ui_select_emoji_group_people": "人物",
+  "ui_select_emoji_group_animals": "动物",
+  "ui_select_emoji_group_food": "食物",
+  "ui_select_emoji_group_activities": "活动",
+  "ui_select_emoji_group_travel": "出行",
+  "ui_select_emoji_group_objects": "物品",
+  "ui_select_emoji_group_symbols": "符号",
   "ui_theme_preview_title": "Wox 主题预览",
   "ui_theme_preview_text_1": "搜索应用程序、文件夹、文件等",
   "ui_theme_preview_text_2": "丰富的插件和 AI 主题",
