feat: add system font family support #4335
- Introduced functionality to load system font families from the OS.
- Added a new property `appFontFamily` to `WoxSetting` to store the selected font family.
- Updated `WoxSettingController` to manage and load system font families.
- Enhanced the settings UI to allow users to select a font family from available system fonts.
- Refactored the main app to apply the selected font family to the text theme.
- Improved error handling and logging for font loading processes across different platforms (Windows, macOS, Linux).

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -238,6 +238,9 @@
   "ui_ai_model_selector_save": "Save",
   "ui_app_width": "Window width",
   "ui_app_width_tips": "Adjust the width of the Wox window",
+  "ui_app_font_family": "Font family",
+  "ui_app_font_family_tips": "Choose a system font for the Wox interface",
+  "ui_app_font_family_system_default": "System default",
   "ui_max_result_count": "Maximum results",
   "ui_max_result_count_tips": "Maximum number of results to display in the list (5-15 items)",
   "ui_ai_chat_select_model": "Please select a model",
