--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -235,6 +235,9 @@
   "ui_ai_model_selector_save": "Salvar",
   "ui_app_width": "Largura da janela",
   "ui_app_width_tips": "Ajuste a largura da janela do Wox",
+  "ui_app_font_family": "Família da fonte",
+  "ui_app_font_family_tips": "Escolha uma fonte do sistema para a interface do Wox",
+  "ui_app_font_family_system_default": "Padrão do sistema",
   "ui_max_result_count": "Contagem máxima de resultados",
   "ui_max_result_count_tips": "Defina o número máximo de resultados a serem exibidos na lista (5-15 itens)",
   "ui_ai_chat_select_model": "Por favor, selecione um modelo",
