--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -235,6 +235,9 @@
   "ui_ai_model_selector_save": "Сохранить",
   "ui_app_width": "Ширина окна",
   "ui_app_width_tips": "Настройте ширину окна Wox",
+  "ui_app_font_family": "Семейство шрифта",
+  "ui_app_font_family_tips": "Выберите системный шрифт для интерфейса Wox",
+  "ui_app_font_family_system_default": "Системный по умолчанию",
   "ui_max_result_count": "Максимальное количество результатов",
   "ui_max_result_count_tips": "Установите максимальное количество результатов, отображаемых в списке (5-15 элементов)",
   "ui_ai_chat_select_model": "Пожалуйста, выберите модель",
