--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -238,6 +238,9 @@
   "ui_ai_model_selector_save": "保存",
   "ui_app_width": "窗口宽度",
   "ui_app_width_tips": "调整 Wox 窗口的宽度",
+  "ui_app_font_family": "字体",
+  "ui_app_font_family_tips": "为 Wox 界面选择系统字体",
+  "ui_app_font_family_system_default": "跟随系统默认",
   "ui_ai_chat_select_model": "请选择模型",
   "ui_ai_chat_input_hint": "在这里输入消息，按 ← 发送",
   "ui_ai_chat_configure_tools": "配置工具使用",
