feat: implement terminal session management with ring buffer and search functionality
- Add SessionManager for managing terminal sessions and their states.
- Introduce RingBuffer for handling terminal output with trimming by bytes and lines.
- Implement search functionality within the terminal output.
- Create tests for SessionManager and RingBuffer to ensure functionality.
- Develop WoxTerminalPreviewView for displaying terminal output in the UI with search capabilities.

--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -520,6 +520,7 @@
   "plugin_shell_enter_to_execute": "Нажмите Enter для выполнения команды и просмотра вывода в реальном времени",
   "plugin_shell_stop": "Остановить",
   "plugin_shell_reexecute": "Выполнить снова",
+  "plugin_shell_delete": "Удалить",
   "plugin_shell_execute_background": "Выполнить в фоне",
   "plugin_shell_execute_background_started": "Команда запущена в фоновом режиме",
   "plugin_shell_status_success": "Успешно",
