feat: implement terminal session management with ring buffer and search functionality
- Add SessionManager for managing terminal sessions and their states.
- Introduce RingBuffer for handling terminal output with trimming by bytes and lines.
- Implement search functionality within the terminal output.
- Create tests for SessionManager and RingBuffer to ensure functionality.
- Develop WoxTerminalPreviewView for displaying terminal output in the UI with search capabilities.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -501,6 +501,7 @@
   "plugin_shell_enter_to_execute": "Press Enter to execute the command and see real-time output",
   "plugin_shell_stop": "Stop",
   "plugin_shell_reexecute": "Re-execute",
+  "plugin_shell_delete": "Delete",
   "plugin_shell_execute_background": "Execute in Background",
   "plugin_shell_execute_background_started": "Command started in background",
   "plugin_shell_status_success": "Success",
