feat(explorer): enhance file dialog interactions and add quick jump paths
- Implemented functionality to ignore Finder's "type to search" when focus is in any text input.
- Added new commands for adding current paths to quick jump paths in the file explorer.
- Updated language files for English, Portuguese, Russian, and Chinese to include new quick jump path features.
- Introduced methods for selecting items in active file dialogs and retrieving active file dialog paths on macOS.
- Added support for navigating Finder windows to specified paths.
- Updated Linux and Windows implementations to return unsupported status for new file dialog features.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -486,8 +486,13 @@
   "plugin_explorer_open": "Abrir",
   "plugin_explorer_reveal_in_explorer": "Revelar no explorador de arquivos",
   "plugin_explorer_jump_to": "Ir para",
+  "plugin_explorer_command_add": "Adicionar caminho atual aos caminhos de salto rápido",
+  "plugin_explorer_add_quick_jump_title": "Adicionar este caminho aos caminhos de salto rápido",
   "plugin_explorer_setting_enable_type_to_search": "Ativar pesquisa ao digitar no explorador de arquivos",
   "plugin_explorer_setting_enable_type_to_search_tips": "Quando o Explorador de Arquivos estiver em foco, basta digitar para abrir o Wox e filtrar a pasta atual. Pressione Esc para cancelar.",
+  "plugin_explorer_setting_quick_jump_paths": "Caminhos de salto rápido",
+  "plugin_explorer_setting_quick_jump_paths_tips": "Depois de adicionar uma pasta, você pode saltar para ela rapidamente no modo de pesquisa por digitação. Quando o explorador de arquivos estiver em foco, você também pode usar explorer add para adicionar o caminho atual rapidamente.",
+  "plugin_explorer_setting_quick_jump_path": "Caminho",
   "plugin_indicator_activate": "Ativar",
   "plugin_indicator_activate_plugin": "Ativar o plugin %s",
   "plugin_paste_to_window": "Colar em %s",
