--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -486,8 +486,13 @@
   "plugin_explorer_open": "Открыть",
   "plugin_explorer_reveal_in_explorer": "Показать в проводнике",
   "plugin_explorer_jump_to": "Перейти к",
+  "plugin_explorer_command_add": "Добавить текущий путь в быстрые переходы",
+  "plugin_explorer_add_quick_jump_title": "Добавить этот путь в быстрые переходы",
   "plugin_explorer_setting_enable_type_to_search": "Включить поиск при наборе в проводнике",
   "plugin_explorer_setting_enable_type_to_search_tips": "Когда Проводник в фокусе, просто начните печатать — откроется Wox и вы сможете фильтровать текущую папку. Нажмите Esc, чтобы отменить.",
+  "plugin_explorer_setting_quick_jump_paths": "Пути быстрого перехода",
+  "plugin_explorer_setting_quick_jump_paths_tips": "После добавления папки вы сможете быстро переходить к ней в режиме поиска при наборе. Когда проводник в фокусе, также можно выполнить explorer add, чтобы быстро добавить текущий путь.",
+  "plugin_explorer_setting_quick_jump_path": "Путь",
   "plugin_explorer_hint_message": "Нажмите, чтобы отфильтровать",
   "plugin_explorer_hint_message_dialog": "Нажмите, чтобы перейти",
   "plugin_indicator_activate": "Активировать",
