--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -489,8 +489,13 @@
   "plugin_explorer_open": "Open",
   "plugin_explorer_reveal_in_explorer": "Reveal in file explorer",
   "plugin_explorer_jump_to": "Jump to",
+  "plugin_explorer_command_add": "Add current path to quick jump paths",
+  "plugin_explorer_add_quick_jump_title": "Add this path to quick jump paths",
   "plugin_explorer_setting_enable_type_to_search": "Enable type-to-search in file explorer",
   "plugin_explorer_setting_enable_type_to_search_tips": "When File Explorer is focused, just start typing to open Wox and filter the current folder. Press Esc to cancel.",
+  "plugin_explorer_setting_quick_jump_paths": "Quick jump paths",
+  "plugin_explorer_setting_quick_jump_paths_tips": "After adding a folder, you can jump to it quickly in type-to-search. When file explorer is focused, you can also run explorer add to quickly add the current path.",
+  "plugin_explorer_setting_quick_jump_path": "Path",
   "plugin_clipboard_copy_date": "Copy date",
   "plugin_clipboard_copy_characters": "Copy characters",
   "plugin_clipboard_image_width": "Image width",
