feat(explorer): enhance file dialog interactions and add quick jump paths
- Implemented functionality to ignore Finder's "type to search" when focus is in any text input.
- Added new commands for adding current paths to quick jump paths in the file explorer.
- Updated language files for English, Portuguese, Russian, and Chinese to include new quick jump path features.
- Introduced methods for selecting items in active file dialogs and retrieving active file dialog paths on macOS.
- Added support for navigating Finder windows to specified paths.
- Updated Linux and Windows implementations to return unsupported status for new file dialog features.

--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -445,8 +445,13 @@
   "plugin_explorer_open": "打开",
   "plugin_explorer_reveal_in_explorer": "在文件管理器中显示",
   "plugin_explorer_jump_to": "跳转到",
+  "plugin_explorer_command_add": "将当前路径添加到快速跳转路径",
+  "plugin_explorer_add_quick_jump_title": "将此路径添加到快速跳转路径",
   "plugin_explorer_setting_enable_type_to_search": "在文件管理器中启用键入搜索",
   "plugin_explorer_setting_enable_type_to_search_tips": "当文件管理器为前台时，直接键入即可唤起 Wox 并在当前文件夹中快速过滤；按 Esc 取消。",
+  "plugin_explorer_setting_quick_jump_paths": "快速跳转路径",
+  "plugin_explorer_setting_quick_jump_paths_tips": "添加后可在键入搜索中快速跳转到该文件夹。当文件管理器处于焦点时，也可以输入 explorer add 快速添加当前路径。",
+  "plugin_explorer_setting_quick_jump_path": "路径",
   "plugin_clipboard_copy_date": "复制日期",
   "plugin_clipboard_copy_characters": "复制字符",
   "plugin_clipboard_image_width": "图片宽度",
