feat(settings): add log management features including clearing logs and updating log level #build
- Implemented `clearLogs` method to clear application logs with loading state management.
- Added `updateLogLevel` method to update the logging level with error handling and state management.
- Introduced `openLogFile` method to open the log file.
- Updated `WoxSetting` entity to include `logLevel` property.
- Enhanced `WoxSettingDataView` to include UI elements for log level selection and log clearing functionality.
- Added dropdown for selecting log level and buttons for clearing logs and opening log files.
- Updated dependencies in `pubspec.lock` for compatibility and improvements.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -254,6 +254,20 @@
   "ui_cloud_sync_plugin_exclusions_empty": "No installed plugins.",
   "ui_cloud_sync_plugin_exclusions_refresh": "Refresh Plugins",
   "ui_data_backup_type_manual": "Manual",
+  "ui_data_log_level_title": "Log Level",
+  "ui_data_log_level_tips": "Default is INFO. Switch to DEBUG when troubleshooting to capture more details.",
+  "ui_data_log_level_info": "INFO",
+  "ui_data_log_level_debug": "DEBUG",
+  "ui_data_log_clear_title": "Log Cleanup",
+  "ui_data_log_clear_tips": "Clear existing logs and start recording from now.",
+  "ui_data_log_clear_button": "Clear Logs",
+  "ui_data_log_open_button": "Open Log File",
+  "ui_data_log_clear_confirm_title": "Clear Logs",
+  "ui_data_log_clear_confirm_message": "Clear all historical logs and start recording from now?",
+  "ui_data_log_clear_cancel": "Cancel",
+  "ui_data_log_clear_confirm": "Clear",
+  "ui_data_log_clear_notify_success": "Logs cleared. Recording has restarted from now.",
+  "ui_data_log_clear_notify_failed": "Failed to clear logs: %s",
   "ui_usage": "Usage",
   "ui_usage_opened": "Wox opened",
   "ui_usage_app_launches": "App launches",
