--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -254,6 +254,20 @@
   "ui_cloud_sync_plugin_exclusions_empty": "没有已安装插件。",
   "ui_cloud_sync_plugin_exclusions_refresh": "刷新插件",
   "ui_data_backup_type_manual": "手动",
+  "ui_data_log_level_title": "日志等级",
+  "ui_data_log_level_tips": "默认是 INFO。排查问题时可切换为 DEBUG 以记录更多细节。",
+  "ui_data_log_level_info": "INFO",
+  "ui_data_log_level_debug": "DEBUG",
+  "ui_data_log_clear_title": "日志清理",
+  "ui_data_log_clear_tips": "清理已有日志，并从当前时刻重新开始记录。",
+  "ui_data_log_clear_button": "清理日志",
+  "ui_data_log_open_button": "打开日志文件",
+  "ui_data_log_clear_confirm_title": "清理日志",
+  "ui_data_log_clear_confirm_message": "确认清理历史日志，并从当前时刻开始记录吗？",
+  "ui_data_log_clear_cancel": "取消",
+  "ui_data_log_clear_confirm": "清理",
+  "ui_data_log_clear_notify_success": "日志已清理，已从当前时刻开始重新记录。",
+  "ui_data_log_clear_notify_failed": "清理日志失败：%s",
   "ui_usage": "使用情况",
   "ui_usage_opened": "Wox 打开次数",
   "ui_usage_app_launches": "应用启动次数",
