feat(settings): add log management features including clearing logs and updating log level #build
- Implemented `clearLogs` method to clear application logs with loading state management.
- Added `updateLogLevel` method to update the logging level with error handling and state management.
- Introduced `openLogFile` method to open the log file.
- Updated `WoxSetting` entity to include `logLevel` property.
- Enhanced `WoxSettingDataView` to include UI elements for log level selection and log clearing functionality.
- Added dropdown for selecting log level and buttons for clearing logs and opening log files.
- Updated dependencies in `pubspec.lock` for compatibility and improvements.

--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -206,6 +206,20 @@
   "ui_data_backup_type": "Tipo",
   "ui_data_backup_type_auto": "Auto",
   "ui_data_backup_type_manual": "Manual",
+  "ui_data_log_level_title": "Nível de log",
+  "ui_data_log_level_tips": "O padrão é INFO. Mude para DEBUG ao investigar problemas para registrar mais detalhes.",
+  "ui_data_log_level_info": "INFO",
+  "ui_data_log_level_debug": "DEBUG",
+  "ui_data_log_clear_title": "Limpeza de logs",
+  "ui_data_log_clear_tips": "Limpa os logs existentes e inicia um novo registro a partir de agora.",
+  "ui_data_log_clear_button": "Limpar logs",
+  "ui_data_log_open_button": "Abrir arquivo de log",
+  "ui_data_log_clear_confirm_title": "Limpar logs",
+  "ui_data_log_clear_confirm_message": "Limpar todo o histórico de logs e começar a registrar a partir de agora?",
+  "ui_data_log_clear_cancel": "Cancelar",
+  "ui_data_log_clear_confirm": "Limpar",
+  "ui_data_log_clear_notify_success": "Logs limpos. O registro foi reiniciado a partir de agora.",
+  "ui_data_log_clear_notify_failed": "Falha ao limpar logs: %s",
   "ui_usage": "Uso",
   "ui_usage_opened": "Wox aberto",
   "ui_usage_app_launches": "Inicializações de apps",
