--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -206,6 +206,20 @@
   "ui_data_backup_type": "Тип",
   "ui_data_backup_type_auto": "Авто",
   "ui_data_backup_type_manual": "Ручной",
+  "ui_data_log_level_title": "Уровень логов",
+  "ui_data_log_level_tips": "По умолчанию INFO. Переключите на DEBUG при диагностике, чтобы получить больше деталей.",
+  "ui_data_log_level_info": "INFO",
+  "ui_data_log_level_debug": "DEBUG",
+  "ui_data_log_clear_title": "Очистка логов",
+  "ui_data_log_clear_tips": "Очистить существующие логи и начать запись с текущего момента.",
+  "ui_data_log_clear_button": "Очистить логи",
+  "ui_data_log_open_button": "Открыть файл лога",
+  "ui_data_log_clear_confirm_title": "Очистить логи",
+  "ui_data_log_clear_confirm_message": "Очистить всю историю логов и начать запись с текущего момента?",
+  "ui_data_log_clear_cancel": "Отмена",
+  "ui_data_log_clear_confirm": "Очистить",
+  "ui_data_log_clear_notify_success": "Логи очищены. Запись начата заново с текущего момента.",
+  "ui_data_log_clear_notify_failed": "Не удалось очистить логи: %s",
   "ui_usage": "Статистика",
   "ui_usage_opened": "Открытия Wox",
   "ui_usage_app_launches": "Запуски приложений",
