feat(websearch): allow user to select custom browser in web search #3597

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -551,6 +551,20 @@
   "plugin_websearch_is_fallback_tooltip": "If enabled, this search will be used if no other search matches the query",
   "plugin_websearch_icon": "Icon",
   "plugin_websearch_web_searches": "Web Searches",
+  "plugin_websearch_default_browser": "Default browser",
+  "plugin_websearch_default_browser_tooltip": "The default browser used by Web Search. If set to system default, links will open with your operating system default browser.",
+  "plugin_websearch_browser": "Browser",
+  "plugin_websearch_browser_tooltip": "Browser for this web search entry. \"Follow global setting\" follows the default browser setting above.",
+  "plugin_websearch_browser_use_default": "Follow global setting",
+  "plugin_websearch_browser_system_default": "System default",
+  "plugin_websearch_browser_google_chrome": "Google Chrome",
+  "plugin_websearch_browser_microsoft_edge": "Microsoft Edge",
+  "plugin_websearch_browser_mozilla_firefox": "Mozilla Firefox",
+  "plugin_websearch_browser_brave": "Brave",
+  "plugin_websearch_browser_opera": "Opera",
+  "plugin_websearch_browser_vivaldi": "Vivaldi",
+  "plugin_websearch_browser_chromium": "Chromium",
+  "plugin_websearch_browser_safari": "Safari",
   "plugin_url_open": "Open",
   "plugin_url_remove": "Remove from url history",
   "plugin_url_open_in_browser": "Open in browser",
