--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -515,6 +515,20 @@
   "plugin_websearch_is_fallback_tooltip": "Se ativado, essa busca será usada se nenhuma outra pesquisa corresponder à consulta",
   "plugin_websearch_icon": "ícone",
   "plugin_websearch_web_searches": "Pesquisas na web",
+  "plugin_websearch_default_browser": "Navegador padrão",
+  "plugin_websearch_default_browser_tooltip": "Navegador padrão usado pelo Web Search. Se definido como padrão do sistema, os links serão abertos no navegador padrão do sistema operacional.",
+  "plugin_websearch_browser": "Navegador",
+  "plugin_websearch_browser_tooltip": "Navegador para esta entrada de pesquisa web. \"Seguir configuração global\" segue a configuração de navegador padrão acima.",
+  "plugin_websearch_browser_use_default": "Seguir configuração global",
+  "plugin_websearch_browser_system_default": "Padrão do sistema",
+  "plugin_websearch_browser_google_chrome": "Google Chrome",
+  "plugin_websearch_browser_microsoft_edge": "Microsoft Edge",
+  "plugin_websearch_browser_mozilla_firefox": "Mozilla Firefox",
+  "plugin_websearch_browser_brave": "Brave",
+  "plugin_websearch_browser_opera": "Opera",
+  "plugin_websearch_browser_vivaldi": "Vivaldi",
+  "plugin_websearch_browser_chromium": "Chromium",
+  "plugin_websearch_browser_safari": "Safari",
   "plugin_url_open": "Abrir",
   "plugin_url_remove": "Remover do histórico de URLs",
   "plugin_url_open_in_browser": "Abrir no navegador",
