--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -517,6 +517,20 @@
   "plugin_websearch_is_fallback_tooltip": "Если включено, этот поиск будет использоваться, если ни один другой поиск не соответствует запросу",
   "plugin_websearch_icon": "Иконка",
   "plugin_websearch_web_searches": "Веб-поиски",
+  "plugin_websearch_default_browser": "Браузер по умолчанию",
+  "plugin_websearch_default_browser_tooltip": "Браузер по умолчанию для Web Search. Если выбран системный, ссылки будут открываться в браузере по умолчанию операционной системы.",
+  "plugin_websearch_browser": "Браузер",
+  "plugin_websearch_browser_tooltip": "Браузер для этой записи веб-поиска. \"Следовать глобальной настройке\" следует настройке браузера по умолчанию выше.",
+  "plugin_websearch_browser_use_default": "Следовать глобальной настройке",
+  "plugin_websearch_browser_system_default": "Системный по умолчанию",
+  "plugin_websearch_browser_google_chrome": "Google Chrome",
+  "plugin_websearch_browser_microsoft_edge": "Microsoft Edge",
+  "plugin_websearch_browser_mozilla_firefox": "Mozilla Firefox",
+  "plugin_websearch_browser_brave": "Brave",
+  "plugin_websearch_browser_opera": "Opera",
+  "plugin_websearch_browser_vivaldi": "Vivaldi",
+  "plugin_websearch_browser_chromium": "Chromium",
+  "plugin_websearch_browser_safari": "Safari",
   "plugin_url_open": "Открыть",
   "plugin_url_remove": "Удалить из истории URL",
   "plugin_url_open_in_browser": "Открыть в браузере",
