--- a/wox.core/resource/lang/zh_CN.json
+++ b/wox.core/resource/lang/zh_CN.json
@@ -552,6 +552,20 @@
   "plugin_websearch_is_fallback_tooltip": "当没有搜索结果匹配当前的查询时, 使用该条网页搜索作为回退搜索",
   "plugin_websearch_icon": "图标",
   "plugin_websearch_web_searches": "网页搜索",
+  "plugin_websearch_default_browser": "默认浏览器",
+  "plugin_websearch_default_browser_tooltip": "Web Search 使用的默认浏览器。若选择系统默认，将使用操作系统默认浏览器打开链接。",
+  "plugin_websearch_browser": "浏览器",
+  "plugin_websearch_browser_tooltip": "该条网页搜索使用的浏览器。“跟随全局设置”将跟随上方默认浏览器设置。",
+  "plugin_websearch_browser_use_default": "跟随全局设置",
+  "plugin_websearch_browser_system_default": "系统默认",
+  "plugin_websearch_browser_google_chrome": "Google Chrome",
+  "plugin_websearch_browser_microsoft_edge": "Microsoft Edge",
+  "plugin_websearch_browser_mozilla_firefox": "Mozilla Firefox",
+  "plugin_websearch_browser_brave": "Brave",
+  "plugin_websearch_browser_opera": "Opera",
+  "plugin_websearch_browser_vivaldi": "Vivaldi",
+  "plugin_websearch_browser_chromium": "Chromium",
+  "plugin_websearch_browser_safari": "Safari",
   "plugin_doctor_version": "版本",
   "plugin_doctor_version_latest": "已经是最新版本：%s",
   "plugin_doctor_version_update_available": "发现新版本",
