feat: enhance preview functionality and local actions
- Refactored preview handling to support fullscreen mode for both terminal and chat previews.
- Introduced local actions for toggling fullscreen and searching within previews.
- Created a new WoxPreviewTopStatusBar component for better status display in previews.
- Updated WoxResultAction to support local actions with handlers.
- Improved hotkey handling for local actions, including search and fullscreen toggles.
- Added enums for result action types to streamline action management.
- Cleaned up unused code and optimized action handling logic.

--- a/wox.core/resource/lang/en_US.json
+++ b/wox.core/resource/lang/en_US.json
@@ -874,6 +874,9 @@
   "toolbar_snooze_forever": "Never show again",
   "toolbar_more_actions": "More Actions",
   "ui_actions": "Actions",
+  "ui_action_toggle_fullscreen": "Fullscreen",
+  "ui_action_exit_fullscreen": "Exit Fullscreen",
+  "ui_action_preview_search": "Search",
   "ui_no_matches": "No matches",
   "selection_copy": "Copy",
   "selection_copy_to_clipboard": "Copy to clipboard",
