--- a/wox.core/resource/lang/pt_BR.json
+++ b/wox.core/resource/lang/pt_BR.json
@@ -836,6 +836,9 @@
   "toolbar_snooze_forever": "Nunca mostrar novamente",
   "toolbar_more_actions": "Mais Ações",
   "ui_actions": "Ações",
+  "ui_action_toggle_fullscreen": "Tela cheia",
+  "ui_action_exit_fullscreen": "Sair da tela cheia",
+  "ui_action_preview_search": "Pesquisar",
   "ui_no_matches": "Nenhuma correspondência",
   "selection_copy": "Copiar",
   "selection_copy_to_clipboard": "Copiar para a área de transferência",
