--- a/wox.core/resource/lang/ru_RU.json
+++ b/wox.core/resource/lang/ru_RU.json
@@ -837,6 +837,9 @@
   "toolbar_snooze_forever": "Больше не показывать",
   "toolbar_more_actions": "Больше действий",
   "ui_actions": "Действия",
+  "ui_action_toggle_fullscreen": "Полный экран",
+  "ui_action_exit_fullscreen": "Выйти из полноэкранного режима",
+  "ui_action_preview_search": "Поиск",
   "ui_no_matches": "Нет совпадений",
   "selection_copy": "Копировать",
   "selection_copy_to_clipboard": "Копировать в буфер обмена",
